[package]
authors = ["Roberto Pintos López <roberto.pintos.lopez@gmail.com>"]
categories = ["compilers"]
description = "Another Rust tool for lexical analysis"
edition = "2018"
keywords = ["analyzer", "compiler", "language", "lexical", "recognition"]
license-file = "LICENSE"
name = "artlr_lex"
version = "0.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
